initial scrap removed from index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Ninja Train</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <canvas id="gameCanvas"></canvas>
-</body>
+    <body>
+        <canvas id="gameCanvas"></canvas>
+
+        <script src="js/ninja.js"></script>
+        <script src="js/object.js"></script>
+        <script src="js/main.js"></script>
+    </body>
+    
 </html>
