--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
     <body>
         <canvas id="gameCanvas"></canvas>
-
+        <div class="home button">
+            <a href="index.html">
+                <h1>Ninja Train</h1>
+                <h4>Home</h4>
+            </a>
+        </div>
+      
         <script src="js/ninja.js"></script>
         <script src="js/object.js"></script>
         <script src="js/main.js"></script>
