--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
     <body>
-        <canvas id="gameCanvas"></canvas>
-        <div class="home button">
-            <a href="index.html">
-                <h1>Ninja Train</h1>
-                <h4>Home</h4>
-            </a>
+        <div class = "container game-container">
+            <canvas id="gameCanvas"></canvas>
+            <div class="home button">
+                <a href="index.html">
+                    <h1>Ninja Train</h1>
+                    <h4>Home</h4>
+                </a>
+            </div>
         </div>
       
         <script src="js/ninja.js"></script>
