--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <body>
         <div class = "container game-container">
             <canvas id="gameCanvas"></canvas>
-            <div class="home button">
+            <div class="home-button">
                 <a href="index.html">
                     <h1>Ninja Train</h1>
-                    <h4>Home</h4>
                 </a>
             </div>
         </div>
