fontawesome buttons added to index.html and positioned in css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ninja Train</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
     <body>
         <div class = "container game-container">
@@ -13,6 +14,13 @@
                 <a href="index.html">
                     <h1>Ninja Train</h1>
                 </a>
+            </div>
+            <div class="up-button">
+                <i class="fa fa-arrow-circle-up fa-lg" aria-hidden="true"></i>
+
+            </div>
+            <div class="down-button">
+                <i class="fa fa-arrow-circle-down fa-lg" aria-hidden="true"></i>
             </div>
         </div>
       
