start button modified

--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 </head>
     <body>
         <div class = "container game-container">
-            <canvas id="gameCanvas"></canvas>
-            <div class="home-button">
+           <canvas id="gameCanvas"></canvas>
+           <div class="home-button">
                 <a href="index.html">
                     <h1>Ninja Train</h1>
                 </a>
             </div>
             <div class="up-button">
                 <i class="fa fa-arrow-circle-up fa-lg" aria-hidden="true"></i>
-
             </div>
             <div class="down-button">
                 <i class="fa fa-arrow-circle-down fa-lg" aria-hidden="true"></i>
             </div>
+            <div class="enter-button">
+                <i class="fa fa-play" aria-hidden="true"></i>
+            </div>
+            
         </div>
       
         <script src="js/ninja.js"></script>
