--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                 <i class="fa fa-arrow-circle-down fa-3x" aria-hidden="true"></i>
             </div>
         </div>
+        <div id = "game-over-screen">
+                <div class="button" id="reset-button">
+                    <h2>Try again</h2>
+                    <i class="fa fa-play fa-3x" aria-hidden="true"></i>
+                </div>
+            </div>
       
         <script src="js/ninja.js"></script>
         <script src="js/object.js"></script>
