final score div added for end of game

--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
             </div>
         </div>
         <div id = "game-over-screen">
+                <div id = "final-score">
+                </div>
                 <div class="button" id="reset-button">
                     <h2>Try again</h2>
                     <i class="fa fa-play fa-3x" aria-hidden="true"></i>
                 </div>
-            </div>
+        </div>
       
         <script src="js/ninja.js"></script>
         <script src="js/object.js"></script>
