extra class added to control buttons

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                     <p>Home</p>
                 </a>
             </div>
-            <div class="button" id="up-button">
+            <div class="button control-button" id="up-button">
                 <i class="fa fa-arrow-circle-up fa-3x" aria-hidden="true"></i>
             </div>
-            <div class="button" id="down-button">
+            <div class="button control-button" id="down-button">
                 <i class="fa fa-arrow-circle-down fa-3x" aria-hidden="true"></i>
             </div>
         </div>
