device orientation warning added

--- a/index.html
+++ b/index.html
@@ -32,14 +32,17 @@
             <div class="button control-button" id="down-button">
                 <i class="fa fa-arrow-circle-down fa-3x" aria-hidden="true"></i>
             </div>
-        </div>
-        <div id = "game-over-screen">
-                <div id = "final-score">
-                </div>
-                <div class="button" id="reset-button">
-                    <h2>Try again</h2>
-                    <i class="fa fa-play fa-3x" aria-hidden="true"></i>
-                </div>
+            <div id = "game-over-screen">
+                    <div id = "final-score">
+                    </div>
+                    <div class="button" id="reset-button">
+                        <h2>Try again</h2>
+                        <i class="fa fa-play fa-3x" aria-hidden="true"></i>
+                    </div>
+            </div>
+            <div id = warning>
+            <h1>please orientate landscape</h1>
+            </div>
         </div>
       
         <script src="js/ninja.js"></script>
