--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div id="name-input">
                     <input id="player-name" type="text" placeholder="Player" />
                 </div>
-                <div class="button" id="play-button">
+                <div class="button command-button" id="play-button">
                     <h2>Play</h2>
                     <i class="fa fa-play fa-3x" aria-hidden="true"></i>
                 </div>
@@ -35,13 +35,13 @@
             <div id = "game-over-screen">
                     <div id = "final-score">
                     </div>
-                    <div class="button" id="reset-button">
+                    <div class="button command-button" id="reset-button">
                         <h2>Try again</h2>
                         <i class="fa fa-play fa-3x" aria-hidden="true"></i>
                     </div>
             </div>
             <div id = warning>
-            <h1>please orientate landscape</h1>
+                <h1>please orientate landscape</h1>
             </div>
         </div>
       
