tips added to title screen

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
                     <h2>Play</h2>
                     <i class="fa fa-play fa-3x" aria-hidden="true"></i>
                 </div>
+                <div class="tips">
+                    <h3>Tips</h3>
+                    <ul>
+                        <li>Use the up and down arrows to evade obstacles</li>
+                        <li>If the ninja is hit by an ostacle its game over</li>
+                        <li>Input your name above and press play to begin</li>
+                    </ul> 
+                </div>
             </div>
            <div class="button" id ="home-button">
                 <a href="index.html">
@@ -33,6 +41,12 @@
                 <i class="fa fa-arrow-circle-down fa-3x" aria-hidden="true"></i>
             </div>
             <div id = "game-over-screen">
+                    <div class="button" id ="home-button">
+                        <a href="index.html">
+                            <h1>Ninja Train</h1>
+                            <p>Home</p>
+                        </a>
+                    </div>
                     <div id = "final-score">
                     </div>
                     <div class="button command-button" id="reset-button">
@@ -41,7 +55,7 @@
                     </div>
             </div>
             <div id = warning>
-                <h1>please orientate landscape</h1>
+                <p>Please orientate your device to landscape mode...</p>
             </div>
         </div>
       
