home button changed from id to class for multiple instances

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul> 
             </div>
         </div>
-        <div class="button" id ="home-button">
+        <div class="button home-button">
             <a href="index.html">
                 <h1>Ninja Train</h1>
                 <p>Home</p>
@@ -40,7 +40,7 @@
             <i class="fa fa-arrow-circle-down fa-3x" aria-hidden="true"></i>
         </div>
         <div id = "game-over-screen">
-            <div class="button" id ="home-button">
+            <div class="button home-button">
                 <a href="index.html">
                     <h1>Ninja Train</h1>
                     <p>Home</p>
